--- a/html/index.html
+++ b/html/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<charset="utf-8">
-		<title>测试页面</title>
+		<title>test</title>
 	</head>
 	<body>
-		本页为测试页面！
+		test1
 	</body>
 </html>
